crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_primary_key_snapshot@composite_primary_key_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "membership")]
pub struct Model {
    #[sea_orm(primary_key, auto_increment = false)]
    pub tenant_id: i32,
    #[sea_orm(primary_key, auto_increment = false)]
    pub user_id: i32,
    pub role: String,
}

vespera::schema_type!(Schema from Model, name = "MembershipSchema");
impl ActiveModelBehavior for ActiveModel {}
