crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_primary_key_snapshot@composite_primary_key_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlmodel import Field, SQLModel


class Membership(SQLModel, table=True):
    __tablename__ = "membership"

    tenant_id: int = Field(primary_key=True)
    user_id: int = Field(primary_key=True)
    role: str = Field(...)
