crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__composite_unique_constraint_snapshot@composite_unique_constraint_Jpa.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
import jakarta.persistence.*;

@Entity
@Table(name = "account_aliases", uniqueConstraints = {
    @UniqueConstraint(name = "uq_account_aliases__tenant_slug", columnNames = {"tenant_id", "slug"})
})
public class AccountAliases {

    @Id
    @Column(name = "id")
    private Integer id;

    @Column(name = "tenant_id", nullable = false)
    private Integer tenantId;

    @Column(name = "slug", nullable = false, columnDefinition = "TEXT")
    private String slug;

    protected AccountAliases() {
    }
}
